--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mpho Ramapi's Portfolio</title>
-    <link rel="stylesheet" th:href="@{/styles/css/style.css}" />
+    <link rel="stylesheet" th:href="@{/styles/css/styles.css}" />
     <link rel="stylesheet" th:href="@{/styles/css/mediaqueries.css}" />
     <script th:src="@{./js/card.js}" defer></script>
     <script th:src="@{./js/youtube.js}" defer></script>
@@ -15,7 +15,6 @@
 </head>
 <body>
 <nav id="desktop-nav">
-    <div class="logo">Hello World!</div>
     <div>
         <ul class="nav-links">
             <li><a th:href="@{#about}">About</a></li>
@@ -25,7 +24,6 @@
     </div>
 </nav>
 <nav id="hamburger-nav">
-    <div class="logo">Hello World!</div>
     <div class="hamburger-menu">
         <div class="hamburger-icon" th:onclick="toggleMenu()">
             <span></span>
@@ -96,7 +94,7 @@
                             class="icon"
                     />
                     <h3>Experience</h3>
-                    <p><span th:text="${myExpInYear}">exp</span>+ years <br />Software Development <em> (2019 - till date)</em></p>
+                    <p><span th:text="${myExpInYear}">exp</span>+ years <br />Software Development <em> (2021 - till date)</em></p>
                 </div>
                 <div class="details-container">
                     <img
@@ -105,13 +103,13 @@
                             class="icon"
                     />
                     <h3>Education</h3>
-                    <p>Software engineering <br />Bachelors Degree <em> (2023 - 2024)</em></p>
+                    <p>Wethinkcode_ <br />Software Engineering <em> (2023 - 2024)</em></p>
                 </div>
             </div>
             <div class="text-container">
                 <p>
                     Hi there! I'm a passionate software engineering student with a love for problem-solving and building cool projects. 
-                    I'm currently honing my skills in software development and exploring technologies like Java, Spring Boot, and React.
+                    I'm currently honing my skills in software development and exploring technologies like Java, Spring Boot.
                 </p>
                 <p>
                     I have a knack for coding and a growing portfolio of personal and academic projects. 
@@ -131,28 +129,6 @@
     />
 </section>
 
-<section id="clients">
-    <p class="section__text__p1">Meet my</p>
-    <h1 class="title">Clients</h1>
-    <div class="client-wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <ul class="carousel">
-            <li class="card" th:each="client : ${clients}">
-                <div class="img"><img th:src="@{${client.assetUrl}}" th:alt="${client.altName}" draggable="${client.draggable}"></div>
-                <h2 th:text="${client.clientName}">Client Name</h2>
-                <span th:text="${client.designation}">Designation</span>
-            </li>
-        </ul>
-        <i id="right" class="fa-solid fa-angle-right"></i>
-    </div>
-
-    <img
-            th:src="@{${arrow.assetUrl}}"
-            th:alt="${arrow.altName}"
-            class="icon arrow"
-            th:onclick="@{location.href='./#'}"
-    />
-</section>
 
 <section id="experience">
     <p class="section__text__p1">Explore My</p>
