--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,7 +45,7 @@
     <section id="profile">
         <div class="section-container">
             <div class="section__pic-container">
-                <img th:src="@{${profilepic}}" th:alt="${myName}" class="profile-picture"/>
+                <img th:src="@{${profilepic}}" th:alt="${myName}" class="profile-picture" style="border-radius: 50%%;"/>
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I'm</p>
